<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="30dp"
            android:minHeight="48dp"
            android:src="@drawable/logo"
            android:background="#000000"/>

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:textCursorDrawable="@drawable/color_cursor"
            android:backgroundTint="@color/purple_200"
            android:fontFamily="sans-serif-condensed-light"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/purple_200"
            android:textCursorDrawable="@drawable/color_cursor"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/purple_200"
            android:textCursorDrawable="@drawable/color_cursor"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/purple_200"
            android:textCursorDrawable="@drawable/color_cursor"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:hint="@string/phoneNumber"
            android:inputType="phone"
            android:minHeight="48dp"
            android:autofillHints="" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:paddingHorizontal="25dp"
            android:paddingVertical="15dp"
            android:layout_gravity="center_horizontal"
            app:cornerRadius="10dp"
            android:text="@string/spremi" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>