<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="729dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="top"
            android:text="@string/scan_it"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:paddingHorizontal="25dp"
            android:paddingVertical="15dp"
            android:text="@string/scan_qr"
            android:fontFamily="sans-serif-condensed-light"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/buttonReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingHorizontal="25dp"
            android:paddingVertical="15dp"
            android:text="@string/i_m_positive"
            android:fontFamily="sans-serif-condensed-light"
            app:cornerRadius="10dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>